k8s/manifests-step4/puma-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demoapp-puma
  labels:
    app: demoapp
    component: puma
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
  selector:
    app: demoapp
    component: puma
