k8s/manifests-step4/puma-https-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demoapp-puma-https
spec:
  tls:
    - secretName: demoapp-puma-tls
  backend:
    serviceName: demoapp-puma
    servicePort: 3000
