k8s/manifests-step4/puma-ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demoapp-puma
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    # for GKE
    # kubernetes.io/ingress.global-static-ip-name: rails-k8s-demoapp
spec:
  tls:
  - hosts:
    - demoapp-puma.${MINIKUBE_IP}.nip.io
    secretName: demoapp-puma-tls
  rules:
  - host: demoapp-puma.${MINIKUBE_IP}.nip.io
    http:
      paths:
      - backend:
          serviceName: demoapp-puma
          servicePort: 3000
